Prints out everything properly, but one statement per line.  Updated build.xml to get rid of annoying message.

--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,7 @@
 	</target>
 
 	<target name="compile">
-		<javac srcdir="src/java" classpath="${antlr.lib}"/>
+		<javac srcdir="src/java" classpath="${antlr.lib}" includeantruntime="false" />
 	</target>
 	
 	<target name="create_run_jar" depends="prepare,build_grammar_src,compile">
