--- a/build.properties
+++ b/build.properties
@@ -6,9 +6,9 @@ src.antlr=${src.dir}/antlr
 
 antlr.lib=${lib.dir}/antlr-3.3-complete.jar
 
-grammar.name=LogoTokens
+grammar.name=LogoAST2
 grammar.src=${src.antlr}/${grammar.name}.g
 grammar.jar=${build.dir}/grammar.jar
 
 src.msu=${src.java}/edu/msu/cse/cse450
-src.main=edu.msu.cse.cse450.Test
+src.main=edu.msu.cse.cse450.InterpLogoAST2
