Updated build.xml to refer to build.properties variables, removed unneeded 'bin' directory

--- a/build.xml
+++ b/build.xml
@@ -6,13 +6,12 @@
 
 	<target name="prepare">
 		<mkdir dir="${build.dir}" />
-        <mkdir dir="bin"/>
+		<mkdir dir="${build.dir}/${src.java}" />
 	</target>
 
 	<target name="clean">
 		<delete dir="${build.dir}" />
 		<delete dir="${src.msu}" includes="${grammar.name}*" />
-        <delete dir="bin"/>
 		<delete dir="${src.java}" includes="**/*.class" />
 		<echo message="MSU Src: ${src.msu}" />
 	</target>
@@ -34,19 +33,18 @@
 	</target>
 
 	<target name="compile">
-		<javac srcdir="src/java" classpath="${antlr.lib}" includeantruntime="false" />
+		<javac destdir="${build.dir}/${src.java}" srcdir="src/java" classpath="${antlr.lib}" includeantruntime="false" />
 	</target>
 	
 	<target name="create_run_jar" depends="prepare,build_grammar_src,compile">
 		<jar destfile="${grammar.jar}" 
 			filesetmanifest="mergewithoutmain" 
-			basedir="src/java"
+			basedir="${build.dir}/${src.java}"
 			includes="**/*.class">
 			<manifest>
-				<attribute name="Main-Class" value="edu.msu.cse.cse450.Test" />
+				<attribute name="Main-Class" value="${src.main}" />
 				<attribute name="Class-Path" value="." />
 			</manifest>
-			<fileset dir="bin" />
 			<zipfileset excludes="META-INF/*.SF" src="${antlr.lib}" />
 		</jar>
 	</target>
