Removed packages per TA's request

--- a/build.properties
+++ b/build.properties
@@ -10,5 +10,5 @@ grammar.name=LogoAST2
 grammar.src=${src.antlr}/${grammar.name}.g
 grammar.jar=${build.dir}/grammar.jar
 
-src.msu=${src.java}/edu/msu/cse/cse450
-src.main=edu.msu.cse.cse450.InterpLogoAST2
+src.msu=${src.java}
+src.main=InterpLogoAST2
