Renamed files for Project 4

--- a/build.properties
+++ b/build.properties
@@ -6,9 +6,9 @@ src.antlr=${src.dir}/antlr
 
 antlr.lib=${lib.dir}/antlr-3.3-complete.jar
 
-grammar.name=LogoAST2
+grammar.name=LogoTurtle
 grammar.src=${src.antlr}/${grammar.name}.g
 grammar.jar=${build.dir}/grammar.jar
 
 src.msu=${src.java}
-src.main=InterpLogoAST2
+src.main=InterpLogoTurtle
