--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,9 @@
 	</target>
 
 	<target name="compile">
-		<javac destdir="${build.dir}/${src.java}" srcdir="src/java" classpath="${antlr.lib}" includeantruntime="false" />
+		<javac destdir="${build.dir}/${src.java}" srcdir="src/java" 
+			classpath="${antlr.lib}" includeantruntime="false" 
+			  debug="true" />
 	</target>
 	
 	<target name="create_run_jar" depends="prepare,build_grammar_src,compile">
