--- a/logging.properties
+++ b/logging.properties
@@ -42,8 +42,8 @@ handlers= java.util.logging.ConsoleHandler
 java.util.logging.FileHandler.pattern = log.txt
 java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
-java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
+java.util.logging.FileHandler.formatter = Formatter
 
 # Limit the message that are printed on the console to INFO and above.
 java.util.logging.ConsoleHandler.level = INFO
-java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
+java.util.logging.ConsoleHandler.formatter = Formatter
