Working copy of Project 5.  Some generation works.  Working on getting println to work.

--- a/build.properties
+++ b/build.properties
@@ -6,10 +6,13 @@ src.antlr=${src.dir}/antlr
 
 antlr.lib=${lib.dir}/antlr-3.3-complete.jar
 turtle.lib=${lib.dir}/turtle.jar
+jasmin.lib=${lib.dir}/jasmin.jar
 
-grammar.name=LogoTurtle
+grammar.name=LogoJVM1
+grammar.tree.name=LogoTree
 grammar.src=${src.antlr}/${grammar.name}.g
+grammar.src.tree=${src.antlr}/${grammar.tree.name}.g
 grammar.jar=${build.dir}/grammar.jar
 
 src.msu=${src.java}
-src.main=InterpLogoTurtle
+src.main=Proj5
