--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,8 @@
 	<classpathentry kind="src" path="src/antlr"/>
 	<classpathentry kind="lib" path="lib/antlr-3.3-complete.jar"/>
 	<classpathentry kind="lib" path="lib/turtle.jar"/>
+	<classpathentry kind="lib" path="lib/jasmin.jar"/>
+	<classpathentry kind="lib" path="lib/ST-4.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
