Project 5 works for basic arithmetic and assignment

--- a/logging.properties
+++ b/logging.properties
@@ -31,7 +31,7 @@ handlers= java.util.logging.ConsoleHandler
 # can be overriden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= INFO
+.level= ALL
 
 ############################################################
 # Handler specific properties.
@@ -42,8 +42,8 @@ handlers= java.util.logging.ConsoleHandler
 java.util.logging.FileHandler.pattern = log.txt
 java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
-java.util.logging.FileHandler.formatter = Formatter
+java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 
 # Limit the message that are printed on the console to INFO and above.
-java.util.logging.ConsoleHandler.level = INFO
-java.util.logging.ConsoleHandler.formatter = Formatter
+java.util.logging.ConsoleHandler.level = ALL
+java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
